# silent-nats

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
docs/: requirements.md
src/: client.rs  main.rs  server.rs  subjects.rs  wire.rs
