[package]
name = "silent-nats"
version = "0.1.0"
edition = "2024"

[dependencies]
silent = { path = "./silent/silent" }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scru128 = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
